major refactor of connections
